--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,23 @@ knitr::opts_chunk$set(
 
 [![Build Status](https://travis-ci.org/jrash/chemmodlab.svg?branch=master)](https://travis-ci.org/jrash/chemmodlab) [![CRAN](https://img.shields.io/cran/v/chemmodlab.svg)]()
 
-`chemmodlab` contains a suite of methods for fitting machine learning models and for validating the resulting models:
+`chemmodlab` contains a suite of methods for fitting machine learning models and for validating the resulting models. It also contains methods for confidence bands and hypothesis tests for hit enrichment curves (see section *Confidence bands and hypothesis tests for hit enrichment curves*).
     
+# Installation
+
+```{r, eval = F}
+# install from CRAN
+install.packages("chemmodlab")
+
+# Or use the development from GitHub:
+# install.packages("devtools")
+devtools::install_github("jrash/chemmodlab")
+```
+
+# Usage
+
+## General model fitting and model evaluations
+
 * `ModelTrain()` fits a series of classification or regression models to sets of descriptors and computes cross-validated measures of model performance.  Repeated k-fold cross validation is performed with multiple, different fold assignments for the data ("splits").
 * `MakeModelDefaults()` makes a list containing the default parameters for all models implemented in ModelTrain.
 * `plot.chemmodlab()` takes a chemmodlab object output by the `ModelTrain` function and creates a series of accumulation curve plots for assesing model and descriptor set performance.
@@ -33,19 +48,6 @@ knitr::opts_chunk$set(
     quantitative structure-activity relationships (QSARs). However, the user can
     directly input their own choices of descriptors and responses, so the capability
     for comparing models is effectively unlimited.
-    
-# Installation
-
-```{r, eval = F}
-# install from CRAN
-install.packages("chemmodlab")
-
-# Or use the development from GitHub:
-# install.packages("devtools")
-devtools::install_github("jrash/chemmodlab")
-```
-
-# Usage
 
 ```{r message=FALSE, warning=FALSE, results='hide'}
 library(chemmodlab)
@@ -55,5 +57,32 @@ cml <- ModelTrain(aid364, ids = TRUE, xcol.lengths = c(24, 147),
                   des.names = c("BurdenNumbers", "Pharmacophores"))
 plot(cml, splits = 1, meths = c("NNet", "KNN"))
 CombineSplits(cml, metric = "enhancement", m = 100)
+```
+
+
+## Confidence bands and hypothesis tests for hit enrichment curves
+
+### Confidence bands for individual curves
+
+```{r message=FALSE, warning=FALSE, results='hide'}
+library(chemmodlab)
+
+data(pparg)
+
+HitEnrich(S.df = pparg[,c(14,2,5)],
+          y = pparg[,3], labels = c("Maximum z-score","Surflex-dock", "ICM"),
+          log = T, conf = T, conf.level = .95)
+```
+
+### Confidence bands for differences between curves 
+
+All pairwise differences between three methods are shown:
+
+```{r message=FALSE, warning=FALSE, results='hide'}
+par(mfrow = c(2, 2))
+
+HitEnrichDiff(S.df = pparg[,c(14,2,5)], y = pparg[,3], x.max = NULL, labels =
+                c("Maximum z-score","Surflex-dock", "ICM"),
+              log = T, conf.level = .95)
 ```
 
