--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 [![Build Status](https://travis-ci.org/jrash/chemmodlab.svg?branch=master)](https://travis-ci.org/jrash/chemmodlab) [![CRAN](https://img.shields.io/cran/v/chemmodlab.svg)]()
 
-`chemmodlab` contains a suite of methods for fitting machine learning models and for validating the resulting models. It also contains methods for confidence bands and hypothesis tests for hit enrichment curves (see section *Confidence bands and hypothesis tests for hit enrichment curves*).
+`chemmodlab` contains a suite of methods for fitting machine learning models and for validating the resulting models. It also contains methods for confidence bands and hypothesis tests for hit enrichment curves.
     
 # Installation
 
@@ -30,6 +30,14 @@ devtools::install_github("jrash/chemmodlab")
 ```
 
 # Usage
+
+Usage is divided into two sections:
+
+* General model fitting and evaluations
+* Confidence bands and hypothesis tests for hit enrichment curves
+
+NOTE: The confidence bands and hypothesis tests section does not require models to be fit in chemmodlab.  Score and activity information can be provided from any model.
+
 
 ## General model fitting and model evaluations
 
